new submit pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@ layout: splash
 <div class="col-lg-12 bg-gray" style="padding: 120px 10% 0px 10%; margin: 0px;">
 <div class="row-fluid">
 
-<h1 style="font-size: 400%; color: #000; text-align: center;">Ready? </h1>
+<h1 style="font-size: 400%; color: #000; text-align: center;">Contact Us</h1>
 <br>
 
           <p>Reach out to us with some details about your project using the form below, and we will respond as soon as possible:
