--- a/submit/mastering/student/index.html
+++ b/submit/mastering/student/index.html
@@ -9,16 +9,15 @@ layout: splash
 <div class="col-lg-12 bg-gray" style="padding: 120px 10% 0px 10%; margin: 0px;">
 <div class="row-fluid">
 
-<h1 style="font-size: 400%; color: #000; text-align: center;">Ready? </h1>
-<br>
-<!-- <p style="font-size: 22px; color: #000;">
-  Send me high quality bounces of your mixes using the form below. Make sure to read my post on <a href="/back-to-basics/Preparing-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible!
-</p> -->
+<h1 style="font-size: 300%; color: #000; text-align: center;">Three steps to get the best master possible:</h1>
 
+
+
+          <img src="/img/Submission-Guidelines-master.png">
 
 <p style="font-size: 20px;">
 
-            Send us a high quality bounce of your mix using the form below. Please include the coupon code <b>IMASTUDENT</b> in the "message" field for your discounted rates!
+            Please include the coupon code <b>IMASTUDENT</b> in the "message" field for your discounted rates!
 
             <!-- <b>TO GET MIXED:</b> Send me your high quality audio tracks, time aligned, by bouncing each track individually from the same point in your session. <a href="https://www.youtube.com/watch?v=PVttS0kA7Uc">Here is a tutorial video of how to export tracks as individual audio files from Pro Tools and Logic.</a>
  -->
