--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ layout: splash
     <h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 15%;;">Your First Song Free</h1>
 
           <p style="font-size: 150%; margin: 0px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;" >
-            Hear the difference we can make with a free master, plus mix feedback, from our experienced engineers.<br><br>
+            Hear the difference we can make with a free master, plus mix feedback, from your own personal mastering engineer. <br>Enter your email below, and your engineer will reach out to you to get started on your project.<br><br>
 
-<p class="hidden-xs hidden-sm hidden-md" style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 300%; font-weight: 400;"><b>
-Enter your email address below to Get Mastered!</b></p>
+<!-- <p class="hidden-xs hidden-sm hidden-md" style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 200%; font-weight: 400;"><b>
+Connect with your engineer by entering your email below:</b></p> -->
 <br>
 
 
@@ -93,11 +93,11 @@ Enter your email address below to Get Mastered!</b></p>
                     <input type="hidden" name="_next" value="/thank-you" />
                     <div class="col-md-1">
                         <button type="submit" class="btn btn-skin pull-right" id="btnContactUs"style=" box-shadow: 0px 0px 20px #000;">
-                            Start</button>
+                            Connect</button>
                     </div>
                 </div>
                 </form>
-               <!--  <p style="color: #fff;"><b>We don't spam</b></p> -->
+              <p style="color: #fff; font-family: Merriweather; font-size: 15px;">"Spamming" is not in our vocabulary. We use your email for engineer communication only.</p>
             </div>
 
 <!-- <a class="master-color-lighter" href="/free-master" style="font-size: 170%; text-shadow: 0px 0px 20px #000;">CLICK HERE TO GET STARTED</a> -->
@@ -288,9 +288,9 @@ Enter your email address below to Get Mastered!</b></p>
 <h1 style="font-size: 200%; color: #000; text-align: center;">Ready? </h1>
 <br>
 
-<h1 class="hidden-sm hidden-xs hidden-md" style="font-size: 500%; color: #000; text-align: center;"><a href="/submit/">Click here to submit</a> </h1>
+<h1 class="hidden-sm hidden-xs hidden-md" style="font-size: 500%; color: #000; text-align: center;"><a href="/submit/mastering/">Click here to submit</a> </h1>
 
-<h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #000; text-align: center;"><a href="/contact/">Click here to submit</a> </h1>
+<h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #000; text-align: center;"><a href="/contact/">Click here to get in touch</a> </h1>
 
 <br>
 
