--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@ layout: splash
 <!--   <div class="col-lg-12 bg-white" style="margin: 3% 0px;"> -->
 
   <div class="row-fluid" style="padding: 7% 10%; background-color:rgba(0, 0, 0, 0);">
-    <h1 class="hidden-xs hidden-sm hidden-md" style="font-size: 600%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">Your First Song Free</h1>
+    <h1 class="hidden-xs hidden-sm hidden-md" style="font-size: 450%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">Your First Song Free</h1>
 
-    <h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 15%;;">Your First Song Free</h1>
+    <h1 class="hidden-lg hidden-xl" style="font-size: 450%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 10%;">Your First Song Free</h1>
 
-          <p style="font-size: 150%; margin: 0px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;" >
-            Hear the difference we can make with a free master, plus mix feedback, from your own personal mastering engineer. <br>Enter your email below, and your engineer will reach out to you to get started on your project.<br><br>
+          <p style=" font-family: 'Lato'; font-size: 150%; margin: 0px; color: #eee; font-weight: 100; text-shadow: 0px 0px 20px #000;" >
+            Hear the difference we can make with a free master, plus
+            mix feedback from your own mastering engineer.  
+          <br>Enter your email below, and your engineer will
+            reach out to you to get started on your project.<br><br>
 
 <!-- <p class="hidden-xs hidden-sm hidden-md" style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 200%; font-weight: 400;"><b>
 Connect with your engineer by entering your email below:</b></p> -->
@@ -97,7 +100,9 @@ Connect with your engineer by entering your email below:</b></p> -->
                     </div>
                 </div>
                 </form>
-              <p style="color: #fff; font-family: Merriweather; font-size: 15px;">"Spamming" is not in our vocabulary. We use your email for engineer communication only.</p>
+                
+               
+              <p style="color: #aaa; font-size: 15px;"><b>"Spamming" is not in our vocabulary. We use your email for engineer communication only.</b></p>
             </div>
 
 <!-- <a class="master-color-lighter" href="/free-master" style="font-size: 170%; text-shadow: 0px 0px 20px #000;">CLICK HERE TO GET STARTED</a> -->
@@ -133,21 +138,21 @@ Connect with your engineer by entering your email below:</b></p> -->
   <h1>What is Get Mastered?</h1>
 
 <p>
-  Get Mastered is the only mastering service that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
+  Get Mastered is a professional, affordable audio mastering service, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
 
 <br>
 <br>
   <b>
-  We strive to make your music, and your mixing skills, the absolute best they can be. 
+  We strive to make your music the absolute best it can be. 
 </b>
 
   <br>
   <br>
-  That is why with every master, our engineers include personalized feedback to improve your mixing. We know firsthand that feedback is critical; after all, every master we distribute is reviewed by two engineers, to make sure you are getting the absolute best audio possible.
+  That is why with every master, our engineers include personalized feedback to improve your mixing. We know firsthand that feedback is critical; after all, every master we distribute is reviewed by at least two of our engineers, to make sure you are getting the absolute best audio possible.
 
   <br>
   <br>
-  If you're looking for a mastering service that wants to help you grow, look no further. Just read our <a target="_blank" href="/#reviews">reviews</a>, listen to some <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a target="_blank" href="/">your first song free!</a> What do you have to lose?
+  If you're looking for a mastering service that wants to help you grow, look no further. Just read our <a target="_blank" href="/#reviews">reviews</a>, listen to some <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a target="_blank" href="/">your first song free!</a>
 
   <br>
   <br>
@@ -243,7 +248,7 @@ Connect with your engineer by entering your email below:</b></p> -->
           </div>
           </div> -->
 
-                    <div id="rates" class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
+                    <div id="rates" class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
                       <div class="row-fluid">
 
@@ -252,7 +257,7 @@ Connect with your engineer by entering your email below:</b></p> -->
             <img class="hidden-lg hidden-xl" src="/img/amazing-value.png" alt="value" width="100%">
 </div>
 </div>
-<div class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
+<div class="col-lg-6" style="padding: 5% 0%; margin: 0px; background: url(/img/speaker.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
                       <div class="row-fluid">
 
@@ -361,6 +366,12 @@ Connect with your engineer by entering your email below:</b></p> -->
             <br>
 
             <i>"This service was simple and quick and the master that was produced <b>fixed all the problems I never knew were there</b>."</i> - Ezra Selga
+            <br>
+            <br>  
+
+            <i><b>"Loved it!</b> Quick, friendly service and very good results."</i> - Rob Sommerlad‎ 
+            <br>
+            <a href="https://www.facebook.com/getmastered/posts/1748983295324815?ref=notif&notif_t=page_wall">[source]</a>
             <br>
             <br>      
 
