--- a/submit/stem-mastering/index.html
+++ b/submit/stem-mastering/index.html
@@ -6,7 +6,7 @@ layout: splash
 
 <section id="Services" align="center">
 
-<div class="col-lg-12 bg-gray" style="padding: 120px 10% 0px 10%; margin: 0px;">
+<div class="col-lg-12 bg-white" style="padding: 120px 10% 0px 10%; margin: 0px;">
 <div class="row-fluid">
 
 <h1 style="font-size: 300%; color: #000; text-align: center;">Three steps to get the best master possible:</h1>
