Spam text tweak

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Connect with your engineer by entering your email below:</b></p> -->
                 </form>
                 
                
-              <p style="color: #fff; font-size: 15px; font-weight: 300;">"Spamming" is not in our vocabulary. We use your email for engineer communication only.</p>
+              <p style="color: #fff; font-size: 15px; font-weight: 300;">Rest assured, "spamming" is not in our vocabulary.</p>
             </div>
 
 <!-- <a class="master-color-lighter" href="/free-master" style="font-size: 170%; text-shadow: 0px 0px 20px #000;">CLICK HERE TO GET STARTED</a> -->
