example page tweaks

--- a/examples/index.html
+++ b/examples/index.html
@@ -10,10 +10,10 @@ layout: splash
   background-attachment: fixed;">
 <div class="row" style="padding: 0px; text-align: center;">
 
-<h1 class="hidden-xs hidden-sm hidden-md" style="text-align: center; font-size: 600%; color: #FFF; text-shadow: 0px 0px 20px #000;">More examples of our work
+<h1 class="hidden-xs hidden-sm hidden-md" style="text-align: center; font-size: 600%; color: #FFF; text-shadow: 0px 0px 20px #000;">Examples of our work
 	</h1>
 
-	<h1 class="hidden-xl hidden-lg" style="text-align: center; font-size: 300%; color: #FFF; text-shadow: 0px 0px 20px #000;"><br>More examples of our work
+	<h1 class="hidden-xl hidden-lg" style="text-align: center; font-size: 300%; color: #FFF; text-shadow: 0px 0px 20px #000;"><br>Examples of our work
 	</h1>
 
 	<br>
@@ -197,7 +197,7 @@ layout: splash
 
 	<br>
 
-	<a target="_blank" href="http://www.soundcloud.com/getmastered" style="text-align: center; font-size: 500%;text-shadow: 0px 0px 20px #000;">Check out our soundcloud HERE
+	<a target="_blank" href="http://www.soundcloud.com/getmastered" style="text-align: center; font-size: 500%;text-shadow: 0px 0px 20px #000;">Check out our soundcloud
 	</a>
 
 	<br>
@@ -205,8 +205,9 @@ layout: splash
 </div>
 
 	</div>
-
+<center>
 {% include reviews.html %}
+</center>
 
 
 
