--- a/subscriptions/value/index.html
+++ b/subscriptions/value/index.html
@@ -3,6 +3,8 @@ title: Value Subscription
 layout: splash
 ---
 <div class="col-lg-12" style="padding: 10%;">
+	<div class="hidden-lg hidden-xl" style="padding-top:10%;">
+	</div>
 <h1 align="center">{{page.title}} Signup</h1>
 
 <script type='text/javascript' src="https://www.paywhirl.com/js/widget.js"></script>
