--- a/subscriptions/free/index.html
+++ b/subscriptions/free/index.html
@@ -3,6 +3,8 @@ title: Free Subscription
 layout: splash
 ---
 <div class="col-lg-12" style="padding: 10%;">
+	<div class="hidden-lg hidden-xl" style="padding-top:10%;">
+	</div>
 <h1 align="center">{{page.title}} Signup</h1>
 
 
