--- a/subscriptions/index.html
+++ b/subscriptions/index.html
@@ -3,6 +3,8 @@ title: Subscriptions
 layout: splash
 ---
 <div class="col-lg-12" style="padding: 10%;">
+	<div class="hidden-lg hidden-xl" style="padding-top:10%;">
+	</div>
 <h1 align="center">Get Mastered Subscriptions</h1>
 
 
