new subscription panels

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: splash
 ---
 
 
-<section id="Services" align="center">
+<section id="free" align="center">
  <!--  <div class="wow fadeInUp" data-wow-delay="1.4s"> -->
 <!--   <div class="col-lg-2">
   </div> -->
@@ -95,7 +95,7 @@ Connect with your engineer by entering your email below:</b></p> -->
                     </div>
                     <input type="hidden" name="_next" value="/thank-you" />
                     <div class="col-md-1">
-                        <button type="submit" class="btn btn-skin pull-right" id="btnContactUs"style=" box-shadow: 0px 0px 20px #000;">
+                        <button type="submit" class="btn btn-skin pull-right" id="btnContactUs" style="box-shadow: 0px 0px 20px #000;">
                             Connect</button>
                     </div>
                 </div>
@@ -137,15 +137,15 @@ Connect with your engineer by entering your email below:</b></p> -->
 <div class="row-fluid">
   <h1>What is Get Mastered?</h1>
 
-<p style="font-size: 18px;">
-  Get Mastered is a professional, affordable audio mastering service, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
+<p style="font-size: 120%;">
+  Get Mastered is a affordable audio mastering service run by real engineers, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
 
   <br>
   <br>
     <b>
-  We strive to make your music the absolute best it can be. 
+  We strive to make your audio the absolute best it can be. 
 </b>
-  That is why we offer personalized mix feedback from our mastering engineers to improve your mixing. We know firsthand that feedback is critical; If you're looking for a mastering service that wants to help you grow, look no further. Just read our <a href="/#reviews">reviews</a>, listen to some <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="/">your first song free!</a>
+  That is why we offer personalized feedback from our engineers to improve your production skills. We know firsthand that feedback is critical; If you're looking for a mastering service that wants to help you grow, look no further. Just read our <a href="/#reviews">reviews</a>, listen to some <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="/">your first song free!</a>
 
   <br>
   <br>
