--- a/subscriptions/index.html
+++ b/subscriptions/index.html
@@ -7,9 +7,9 @@ layout: splash
 	</div>
 <h1 align="center">Get Mastered Subscriptions</h1>
 
-
 <script type='text/javascript' src="https://www.paywhirl.com/js/widget.js"></script>
-<iframe frameBorder="0" style='width:100%; height:auto; border:0; overflow:hidden;' id='paywhirl_frame' scrolling='no' src="https://www.paywhirl.com/widget?api_key=PW6392B71ECD91B0F440C49FD26F6A9625"></iframe>
+<iframe frameBorder="0" style='width:100%; height:auto; border:0; overflow:hidden;' id='paywhirl_frame' scrolling='no' src="https://www.paywhirl.com/widget?api_key=PW6392B71ECD91B0F440C49FD26F6A9625&widget=5310"></iframe>
+
 
 
 </div>
