--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Mastering Services
-layout: splash
+layout: splash-home
 ---
 
 
@@ -31,7 +31,7 @@ layout: splash
 
 <!--   <div class="col-lg-12 bg-white" style="margin: 3% 0px;"> -->
 
-  <div class="row-fluid" style="padding: 7% 10%; background-color:rgba(0, 0, 0, 0);">
+  <div class="page-scroll row-fluid" style="padding: 7% 10%; background-color:rgba(0, 0, 0, 0);">
     <h1 class="hidden-xs hidden-sm hidden-md" style="font-size: 450%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; text-transform: uppercase;">Your First Song Free</h1>
 
     <h1 class="hidden-lg hidden-xl" style="font-size: 200%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 10%; text-transform: uppercase;">YOUR FIRST SONG FREE</h1>
@@ -109,10 +109,11 @@ Connect with your engineer by entering your email below:</b></p> -->
 
           </p>
           <br>
-
+          <a href="#about">
           <p class="hidden-xs hidden-sm hidden-md" style="font-size: 170%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 100px; font-weight: 400;">Scroll to learn more about Get Mastered</p>
           <p class="hidden-xl hidden-lg" style="font-size: 150%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 0px; font-weight: 400;">Scroll to learn more about Get Mastered</p>
           <img src="/img/down-arrow.png" alt="arrow" width="10%">
+          </a>
 
 
 <!--         </div>  -->
@@ -133,19 +134,19 @@ Connect with your engineer by entering your email below:</b></p> -->
 
 
 
-<div id="about" class="col-lg-12 bg-white" style="padding: 5% 15%; margin: 0px;">
+<div id="about" class="page-scroll col-lg-12 bg-white" style="padding: 5% 15%; margin: 0px;">
 <div class="row-fluid">
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 120%;">
-  Get Mastered is a affordable audio mastering service run by real engineers, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
+  Get Mastered is an affordable audio mastering service run by real engineers, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
 
   <br>
   <br>
     <b>
   We strive to make your audio the absolute best it can be. 
 </b>
-  That is why we offer personalized feedback from our engineers to improve your production skills. We know firsthand that feedback is critical; If you're looking for a mastering service that wants to help you grow, look no further. Just read our <a href="/#reviews">reviews</a>, listen to some <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="/">your first song free!</a>
+  That is why we offer personalized feedback from our engineers to improve your production skills. We know firsthand that feedback is critical; If you're looking for a mastering service that wants to help you grow, look no further. Just read our <a href="#reviews">reviews</a>, listen to some <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="#free">your first song free!</a>
 
   <br>
   <br>
