contact form update

--- a/submit/mastering/student/index.html
+++ b/submit/mastering/student/index.html
@@ -55,7 +55,7 @@ layout: splash
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
                                 <option value="Get Mastered: Submission">Mastering</option>
-                                <option value="Get Mastered: Other">Audio Restoration</option>
+                                <option value="Get Mastered: Other">Mix Feedback</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
