--- a/contact/index.html
+++ b/contact/index.html
@@ -34,7 +34,7 @@ layout: splash
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
                                 <option value="Get Mastered: Submission">Mastering</option>
-                                <option value="Get Mastered: Other">Stem Mastering</option>
+                                <option value="Get Mastered: Other">Mix Feedback</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
