--- a/submit/payment/index.html
+++ b/submit/payment/index.html
@@ -1,5 +1,5 @@
 ---
-title: Submissions
+title: Services
 layout: splash
 ---
 
@@ -7,25 +7,33 @@ layout: splash
 <section id="Services" align="center">
 
 <div class="col-lg-12 bg-white" style="padding: 120px 10% 0px 10%; margin: 0px;">
-<div class="row-fluid">
+<div class="row">
 
-<h1 style="font-size: 200%; color: #000; text-align: center;">Three steps to get the best master possible:</h1>
-
-
-
-          <img src="/img/Submission-Guidelines-master.png">
-
-
-            <h4>Looking for stem mastering submission instructions? <a href="/submit/stem-mastering/">Click here</a></h2>
-
-<div class="hidden-sm hidden-xs hidden-md" style="margin-bottom: 30px; padding: 0px;">
-        <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
-            </div>
+<h1 style="font-size: 400%; color: #000; text-align: center;">Ready? </h1>
+<br>
+<!-- <p style="font-size: 22px; color: #000;">
+  Send me high quality bounces of your mixes using the form below. Make sure to read my post on <a href="/back-to-basics/Preparing-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible!
+</p> -->
 
 
-<div class="hidden-lg hidden-xl" style="margin-bottom: 30px; padding: 0px;">
-        <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="80%"></iframe>
-            </div>
+<p style="font-size: 20px;">
+
+            Select your service below. If you are a paying subscriber, please contact your engineer directly.<br><br>
+          </p>
+
+<div class="col-lg-6 bg-white">
+<script type='text/javascript' src="https://www.paywhirl.com/js/widget.js"></script>
+<iframe frameBorder="0" style='width:100%; height:auto; border:0; overflow:hidden;' id='paywhirl_frame' scrolling='no' src="https://www.paywhirl.com/widget/payment-form/3978?api_key=PW6392B71ECD91B0F440C49FD26F6A9625"></iframe>
+</div>
+
+<div class="col-lg-6 bg-white">
+<script type='text/javascript' src="https://www.paywhirl.com/js/widget.js"></script>
+<iframe frameBorder="0" style='width:100%; height:auto; border:0; overflow:hidden;' id='paywhirl_frame' scrolling='no' src="https://www.paywhirl.com/widget/payment-form/4023?api_key=PW6392B71ECD91B0F440C49FD26F6A9625"></iframe>
+
+</div>
+</div>
+<div class="row">
+
 
           <p style="font-size: 20px;"><b>Having issues? On mobile? Have another query?</b> Reach out to us using the form below:
       <br>
