organized submission pages

--- a/submit/mastering/index.html
+++ b/submit/mastering/index.html
@@ -4,10 +4,18 @@ layout: splash
 ---
 
 
-<section id="Services" align="center">
+<section id="Submissions" align="center">
 
 <div class="col-lg-12 bg-white" style="padding: 120px 10% 0px 10%; margin: 0px;">
+
 <div class="row-fluid">
+<h4 style="color: #aaa;">Mastering Submissions - <a href="/submit/mix-feedback/">Mix Feedback Submissions</a> - <a href="/submit/stem-mastering/">Stem Mastering Submissions</a></h4>
+<br>
+</div>
+
+
+<div class="row-fluid">
+
 
 <h1 style="font-size: 200%; color: #000; text-align: center;">Three steps to get the best master possible:</h1>
 
@@ -15,8 +23,6 @@ layout: splash
 
           <img src="/img/Submission-Guidelines-master.png">
 
-
-            <h4>Looking for stem mastering submission instructions? <a href="/submit/stem-mastering/">Click here</a></h2>
 
 <div class="hidden-sm hidden-xs hidden-md" style="margin-bottom: 30px; padding: 0px;">
         <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
