--- a/submit/mix-feedback/index.html
+++ b/submit/mix-feedback/index.html
@@ -9,21 +9,14 @@ layout: splash
 <div class="col-lg-12 bg-white" style="padding: 120px 10% 0px 10%; margin: 0px;">
 <div class="row-fluid">
 
-<h1 style="font-size: 300%; color: #000; text-align: center;">Three steps to get the best master possible:</h1>
+<h4 style="color: #aaa;"><a href="/submit/mastering/">Mastering Submissions</a> - Mix Feedback Submissions - <a href="/submit/stem-mastering/">Stem Mastering Submissions</a></h4>
+<br>
+</div>
 
 
+<div class="row-fluid">
 
-          <img src="/img/Submission-Guidelines-master.png">
-
-<p style="font-size: 20px;">
-
-            Please include the coupon code <b>IMASTUDENT</b> in the "message" field for your discounted rates!
-
-            <!-- <b>TO GET MIXED:</b> Send me your high quality audio tracks, time aligned, by bouncing each track individually from the same point in your session. <a href="https://www.youtube.com/watch?v=PVttS0kA7Uc">Here is a tutorial video of how to export tracks as individual audio files from Pro Tools and Logic.</a>
- -->
-          </p>
-
-
+<h3 style="font-size: 200%; color: #000; text-align: center;">Send your engineer your mix for feedback using the form below:</h3>
 
 <div class="hidden-sm hidden-xs hidden-md" style="margin-bottom: 30px; padding: 0px;">
         <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
