subscriptions beautified, FAQ added

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ layout: splash-home
     <h1 class="hidden-lg hidden-xl" style="font-size: 200%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000; padding-top: 10%; text-transform: uppercase;">YOUR FIRST SONG FREE</h1>
 
           <p style=" font-family: 'Lato'; font-size: 119%; margin: 0px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;" >
-            Hear the difference we can make with a free master, plus
-            mix feedback from your own mastering engineer.  
+            Hear the difference we can make with a free master, plus free
+            mix feedback, from your own mastering engineer.  
           <br>Enter your email below, and your engineer will
             reach out to you to get started on your project.<br>
 
@@ -233,6 +233,9 @@ Connect with your engineer by entering your email below:</b></p> -->
 
 
 {% include rates-services.html %}
+{% include faq.html %}
+<div class="col-lg-12" style="padding: 5% 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
+  background-attachment: fixed;"><br></div>
 
 
 <!-- <div class="col-lg-12 bg-white" style="padding: 5%; margin: 0px;">
