--- a/subscriptions/index.html
+++ b/subscriptions/index.html
@@ -7,9 +7,7 @@ layout: splash
 	</div>
 <h1 align="center">Get Mastered Subscriptions</h1>
 
-<script type='text/javascript' src="https://www.paywhirl.com/js/widget.js"></script>
-<iframe frameBorder="0" style='width:100%; height:auto; border:0; overflow:hidden;' id='paywhirl_frame' scrolling='no' src="https://www.paywhirl.com/widget?api_key=PW6392B71ECD91B0F440C49FD26F6A9625&widget=5310"></iframe>
-
-
+<script type="text/javascript" id='pw_56edd02f6838d' src="https://app.paywhirl.com/pw.js"></script>
+<script>paywhirl('widget',{domain:'getmastered' ,uuid:'d9176124-1c87-42df-a915-786f46f162d3'},'pw_56edd02f6838d'); </script>
 
 </div>
