--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ Connect with your engineer by entering your email below:</b></p> -->
 
 
 
-
+{% include rates.html %}
 {% include rates-services.html %}
 {% include faq.html %}
 <div class="col-lg-12" style="padding: 5% 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
