example front and center

--- a/index.html
+++ b/index.html
@@ -138,15 +138,31 @@ Connect with your engineer by entering your email below:</b></p> -->
 <div class="row-fluid">
   <h1>What is Get Mastered?</h1>
 
-<p style="font-size: 120%;">
-  Get Mastered is an affordable audio mastering service run by real engineers, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through feedback from a professional mastering engineer.
+<p style="font-size: 16px;">
+  Get Mastered is an affordable audio mastering service run by professional mastering engineers, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through Mix Feedback from a professional mastering engineer. Here is just one example of the difference we can make to your music:
 
   <br>
-  <br>
+
+</p>
+
+<div class="col-md-6 col-xs-12" style="margin-bottom: 2%;">
+  <h3>BEFORE:</h3>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187970&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+</div>
+<div class="col-md-6 col-xs-12" style="margin-bottom: 2%;">
+  <h3>AFTER:</h3>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187982&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+<br>
+</div>
+
+<p style="font-size: 16px;">
+
     <b>
-  We strive to make your audio the absolute best it can be. 
+  Our mastering engineers strive to make your audio the absolute best it can be, <a href="#rates">at rates that are the absolute best value for your dollar.</a>
 </b>
-  That is why we offer personalized feedback from our engineers to improve your production skills. We know firsthand that feedback is critical; If you're looking for a mastering service that wants to help you grow, look no further. Just read our <a href="#reviews">reviews</a>, listen to some <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="#free">your first song free!</a>
+  Just read <a href="#reviews">reviews from our happy customers</a>, listen to some more <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="#free">your first song free!</a>
+
+</p>
 
   <br>
   <br>
