--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Connect with your engineer by entering your email below:</b></p> -->
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 16px;">
-  Get Mastered is an affordable audio mastering service run by professional mastering engineers, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through Mix Feedback from a professional mastering engineer. Here is just one example of the difference we can make to your music:
+  Get Mastered is an affordable audio improvement service run by professional mastering engineers, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through Mix Feedback from a professional mastering engineer. Here is just one example of the difference we can make to your music:
 
   <br>
 
