--- a/index.html
+++ b/index.html
@@ -141,15 +141,14 @@ Connect with your engineer by entering your email below:</b></p> -->
 <p style="font-size: 16px;">
   Get Mastered is an affordable audio improvement service run by professional mastering engineers, and the only service of its kind that provides engineers of all levels a chance to grow their production skills through Mix Feedback from a professional mastering engineer. Here is just one example of the difference we can make to your music:
 
-  <br>
 
 </p>
 
-<div class="col-md-6 col-xs-12" style="margin-bottom: 2%;">
+<div class="col-md-6 col-xs-12" style="margin: 2% 0% 4% 0%;">
   <h3>BEFORE:</h3>
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187970&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 </div>
-<div class="col-md-6 col-xs-12" style="margin-bottom: 2%;">
+<div class="col-md-6 col-xs-12" style="margin: 2% 0% 4% 0%;">
   <h3>AFTER:</h3>
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187982&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 <br>
@@ -248,9 +247,9 @@ Connect with your engineer by entering your email below:</b></p> -->
 
 
 {% include rates.html %}
-{% include rates-services.html %}
+<!-- rate-services -->
 {% include faq.html %}
-<div class="col-lg-12" style="padding: 5% 0px; background: url(/img/speaker-w.png) no-repeat center center;   background-size: cover; 
+<div class="col-lg-12" style="padding: 5% 0px; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;"><br></div>
 
 
