--- a/subscriptions/index.html
+++ b/subscriptions/index.html
@@ -7,7 +7,7 @@ layout: splash
 	</div>
 <h1 align="center">Get Mastered Subscriptions</h1>
 
-<script type="text/javascript" id='pw_56edd02f6838d' src="https://app.paywhirl.com/pw.js"></script>
-<script>paywhirl('widget',{domain:'getmastered' ,uuid:'d9176124-1c87-42df-a915-786f46f162d3'},'pw_56edd02f6838d'); </script>
+<script type="text/javascript" id='pw_56ef60d25ed97' src="https://app.paywhirl.com/pw.js"></script>
+<script>paywhirl('widget',{domain:'getmastered' ,uuid:'d9176124-1c87-42df-a915-786f46f162d3'},'pw_56ef60d25ed97'); </script>
 
 </div>
