--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@ Connect with your engineer by entering your email below:</b></p> -->
 
 
 {% include rates.html %}
-<!-- rate-services -->
+{% include rates-services.html %}
 {% include faq.html %}
-<div class="col-lg-12" style="padding: 5% 0px; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
+<div class="col-lg-12 hidden-xs hidden-sm" style="padding: 5% 0px; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;"><br></div>
 
 
