--- a/login/index.html
+++ b/login/index.html
@@ -3,6 +3,7 @@ title: Login
 layout: splash
 ---
 <div class="col-lg-12" style="padding: 12%;">
-<script type="text/javascript" id='pw_56edd9d837c20' src="https://app.paywhirl.com/pw.js"></script>
-<script>  paywhirl('create','getmastered','pw_56edd9d837c20'); </script>
+<script type='text/javascript' src="https://www.paywhirl.com/js/widget.js"></script>
+<iframe frameBorder="0" style='width:100%; height:auto; border:0; overflow:hidden;' id='paywhirl_frame' scrolling='no' src="https://www.paywhirl.com/widget/login?api_key=PW6392B71ECD91B0F440C49FD26F6A9625"></iframe>
+
 </div>
