--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: splash-home
 
 </div> -->
 
-<div class="col-lg-12" style="padding: 5% 0px; background: url(/img/backgrounds/faders.png) no-repeat center center;   background-size: cover; 
+<div class="col-lg-12" style="padding: 5% 0px; background: url(/img/backgrounds/faders-lq.jpg) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
 
