button color fix

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Connect with your engineer by entering your email below:</b></p> -->
                     </div>
                     <input type="hidden" name="_next" value="/thank-you" />
                     <div class="col-md-1">
-                        <button type="submit" class="btn btn-skin pull-right" id="btnContactUs" style="box-shadow: 0px 0px 20px #777;">
+                        <button type="submit" class="btn btn-skin pull-right" id="btnContactUs" style="box-shadow: 0px 0px 20px #777; color: #fff;">
                             Connect</button>
                     </div>
                 </div>
