--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ Connect with your engineer by entering your email below:</b></p> -->
                 </div>
                 </form>
                 
-               <div class="hidden-xs hidden-sm" >
+               <!-- <div class="hidden-xs hidden-sm" >
               <p style="color: #fff; font-size: 15px; font-weight: 300;">Rest assured, "spamming" is not in our vocabulary.</p>
-              </div>
+              </div> -->
             </div>
 
 <!-- <a class="master-color-lighter" href="/free-master" style="font-size: 170%; text-shadow: 0px 0px 20px #000;">CLICK HERE TO GET STARTED</a> -->
@@ -151,16 +151,33 @@ Connect with your engineer by entering your email below:</b></p> -->
 
 <div class="col-md-6 col-xs-12" style="margin: 2% 0% 4% 0%;">
   <h3>BEFORE:</h3>
-  <audio controls>
-    <source src="/audio/UNMASTERED - Tuxis Giant - Rat Raft (Indie).mp3" type="audio/mpeg">
+  <audio id="player"  controls>
+    <source src="/audio/UNMASTERED - Mr Grimly - Autumn Song ft Kite (Electronic Chill).mp3" type="audio/mpeg">
       Your browser does not support the audio element.
   </audio>
-<!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187970&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
+<!--
+  <button type="btn" onclick="audioToggle()">Toggle Audio</button>
+
+<script>
+function audioToggle() {
+  var player;
+  audio = document.getElementById("player")
+
+  if (audio.currentSrc == "/audio/UNMASTERED - Mr Grimly - Autumn Song ft Kite (Electronic Chill).mp3"){
+    document.getElementById("player").currentSrc = "/audio/MASTERED - Mr Grimly - Autumn Song ft Kite (Electronic Chill).mp3";
+  }
+  else {
+    document.getElementById("player").currentSrc = "/audio/UNMASTERED - Mr Grimly - Autumn Song ft Kite (Electronic Chill).mp3";
+  } 
+
+}
+</script>
+-->
 </div>
 <div class="col-md-6 col-xs-12" style="margin: 2% 0% 4% 0%;">
   <h3>AFTER:</h3>
   <audio controls>
-    <source src="/audio/MASTERED - Tuxis Giant - Rat Raft (Indie).mp3" type="audio/mpeg">
+    <source src="/audio/MASTERED - Mr Grimly - Autumn Song ft Kite (Electronic Chill).mp3" type="audio/mpeg">
       Your browser does not support the audio element.
   </audio>
 <!-- <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187982&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
