--- a/index.html
+++ b/index.html
@@ -6,30 +6,12 @@ layout: splash-home
 
 <section id="free" align="center">
  <!--  <div class="wow fadeInUp" data-wow-delay="1.4s"> -->
-<!--   <div class="col-lg-2">
-  </div> -->
-<!-- 	<div class="col-lg-12" style="padding: 150px 15% 0px 15%; background: url(http://i1045.photobucket.com/albums/b459/keenanhi/bg3_zpsbxllc2tb.jpg) no-repeat center center;   background-size: cover; 
-  background-attachment: fixed;">
-		<h1 style="font-size: 350%; color: #FFF; text-align: center;">Looking for your personal audio engineer?</h1>
-  <div class="row-fluid" style="padding: 0px;">
-      <p style="font-size: 32px; color: #DDD;">
 
-<br>
-
-            My name is Keenan, and I created Get Mastered as a way for independent musicians to foster a direct relationship with an experienced audio engineer at a realistic rate.
-
-<br>
-            <br>
-          </p>
-        </div>
-
-</div> -->
 
 <div class="col-lg-12" style="padding: 5% 0px; background: url(/img/backgrounds/faders-lq.jpg) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
 
 
-<!--   <div class="col-lg-12 bg-white" style="margin: 3% 0px;"> -->
 
   <div class="page-scroll row-fluid" style="padding: 7% 10%; background-color:rgba(0, 0, 0, 0);">
     <h1 class="hidden-xs hidden-sm hidden-md" style="font-size: 450%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #333; text-transform: uppercase;">Not just a master</h1>
@@ -40,43 +22,14 @@ layout: splash-home
             But a working relationship with a professional mastering engineer.</p>
             <p style=" font-family: 'Lato'; font-size: 119%; margin: 0px; color: #fff; font-weight: 400; text-shadow: 0px 0px 20px #333;" >
             <br> <br>
-            While we launch, hear the difference we can make to your music with a free master, plus free
-            mix feedback, from your own mastering engineer.  
+            While we launch, discover how your mixes can sound at their full potential with a free master from your own personal mastering engineer.  
           <br>Enter your email below, and your engineer will
-            reach out to you to get started on your project, free of charge.<br>
-
-<!-- <p class="hidden-xs hidden-sm hidden-md" style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 200%; font-weight: 400;"><b>
-Connect with your engineer by entering your email below:</b></p> -->
+            reach out to you to get started on your first song, free of charge.<br>
 <br>
 </p>
 
 
 <div >
-
-
-<!--  
-<form id="contact-form" method="post" action="//getmastered.us10.list-manage.com/subscribe/post?u=bb14eb93467fa9f89bc914f09&amp;id=1d85fcd133" style="padding: 0px 0px;" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <h4 style="color: #777; text-align: center; margin: 0px; padding: 5px;">Want 10% off your first job?</h4>
-    
-   <div id="mc_embed_signup_scroll" style="padding: 10px 0px 10px 0px;">
-                <div class="container-fluid">
-                        <div class="row">
-                            <div class="form-group">
-                                <textarea class="form-control" name="EMAIL" id="mce-EMAIL" rows="1" cols="100" required="required" placeholder="Enter your email to get exclusive discounts"></textarea>
-                            </div>
-                            <div id="mce-responses" class="clear">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    
-                            
-                            <button type="submit" name="subscribe" class="btn btn-skin bg-dark" value="Subscribe" id="mc-embedded-subscribe">Submit</button>
-                     </div>
-            </div>
-        </div>
-</form>
- -->
-
-
 
 
 
@@ -144,7 +97,7 @@ Connect with your engineer by entering your email below:</b></p> -->
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 16px;">
-  Get Mastered is an audio improvement and mastering service run by professional mastering engineers, and the only service of its kind that provides musicians and engineers of all levels a chance to grow their production skills through Mix Feedback from a personal engineer. Below is just one example of the difference we can make to your music through our collaborative mastering process:
+  Get Mastered is an audio improvement and mastering service run by professional mastering engineers, and the only service of its kind that provides musicians and engineers of all levels a chance to grow their production skills through Mix Feedback. Below is just one example of the difference we can make to your music through our collaborative mastering process:
 
 
 </p>
@@ -236,110 +189,16 @@ function audioPlayPause(){
 </div>
 
 
-<!-- 
-  <div id="hear" class="col-lg-12" style="padding: 5% 15%; background: url(/img/faders.png) no-repeat center center;   background-size: cover; 
-  background-attachment: fixed;">
-
-            <div class="row-fluid">
-              <h1 style="font-size: 350%; color: #FFF; text-align: center; text-shadow: 0px 0px 20px #000;">What can you expect from Get Mastered?</h1>
-          </div>
-          </div>
-
-<div class="col-lg-6 bg-white" style="padding: 5%; margin: 0px;">
-                      <div class="row-fluid">
-
-
-<h3>
-            Indie Alternative:
-            </h3>
-
-<p>
-
-<b>Before:</b>
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187970&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-
-<b>After:</b>
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241187982&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-
-
-<br>
-<br>
-</p>
-
-</div>
-          </div>
-
-
-<div class="col-lg-6 bg-white" style="padding: 5%; margin: 0px;">
-                      <div class="row-fluid">
-
-
-<h3>
-            Electronic Chillout:
-            </h3>
-
-<p>
-
-<b>Before:</b>
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242747937&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-
-<b>After:</b>
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242747939&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-<br>
-<br>
-</p>
-
-
-</div>
-</div> -->
-
-<!-- <div class="col-lg-12" style="padding: 0% 5% 5% 5%;">
-
-            <div class="row-fluid" style="padding: 0px;">
-              <a target="_blank" href="/examples/" class="master-color" style="font-size: 350%; text-align: center;">Click here for even more examples of our work</a>
-          </div>
-          </div> -->
-
-
 
 {% include rates.html %}
 <div class="col-xs-12"></div>
 {% include rates-services.html %}
-{% include faq.html %}
 
 
-<!-- <div class="col-lg-12 bg-white" style="padding: 5%; margin: 0px;">
-<div class="row-fluid">
 
-<h1 style="font-size: 200%; color: #000; text-align: center;">Ready? </h1>
-<br>
-
-<h1 class="hidden-sm hidden-xs hidden-md" style="font-size: 500%; color: #000; text-align: center;"><a href="/submit/mastering/">Click here to submit</a> </h1>
-
-<h1 class="hidden-lg hidden-xl" style="font-size: 300%; color: #000; text-align: center;"><a href="/contact/">Click here to get in touch</a> </h1>
-
-<br>
-
-
-</div>
-</div> -->
 
 {% include reviews.html %}
 
   </div>
-
-
-<!-- <div class="col-lg-2">
-  </div> -->
-
-<!-- </div> -->
-
-<!--   <div class="row-fluid bg-white" style="padding-top: 10%">
-Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, <a href="http://www.flaticon.com/authors/appzgear" title="Appzgear">Appzgear</a>, <a href="http://www.flaticon.com/authors/anton-saputro" title="Anton Saputro">Anton Saputro</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div> -->
-
 
 </section>
