--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@ function audioPlayPause(){
   Our mastering engineers strive to make your audio the absolute best it can be, <a href="#rates">at rates that are the absolute best value for your dollar.</a>
 </b>
   Just read <a href="#reviews">reviews from our happy customers</a>, listen to some more <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="#free">your first song free!</a>
+  <br>
+  <br>
+  Learn more about Get Mastered, our engineers, and our vision, by clicking <a href="/blog/about/What-Is-Get-Mastered/">here</a>, or keep scrolling to see our services and rates.
 
 </p>
 
