new bio pictures

--- a/payment/index.html
+++ b/payment/index.html
@@ -6,8 +6,7 @@ layout: splash
 
 <section id="payment" align="center">
 
-<div class="col-lg-12 bg-white" style="padding: 120px 10% 120px 10%; margin: 0px; background: url(/img/backgrounds/knobs-w-lq.jpg) no-repeat center center;   background-size: cover; 
-  background-attachment: fixed;">
+<div class="col-lg-12 bg-white" style="padding: 120px 10% 120px 10%; margin: 0px;">
 
 
 <!-- <link rel="stylesheet" href="https://embed.calculoid.com/styles/main.css" />
