--- a/examples/index.html
+++ b/examples/index.html
@@ -6,18 +6,14 @@ layout: splash
 <section>
 
 
-	<div class="col-lg-12 bg-white" style="padding: 10% 5% 3% 5%; margin: 0px; background: url(/img/speaker.png) no-repeat center center;   background-size: cover; 
-  background-attachment: fixed;">
+	<div class="col-lg-12 bg-white" style="padding: 10% 5% 3% 5%; margin: 0px;">
 <div class="row" style="padding: 0px; text-align: center;">
 
-<h1 class="hidden-xs hidden-sm hidden-md" style="text-align: center; font-size: 600%; color: #FFF; text-shadow: 0px 0px 20px #000;">Examples of our work
+<h1 class="hidden-xs hidden-sm hidden-md" style="text-align: center; font-size: 600%;">Examples of our work
 	</h1>
 
 	<h1 class="hidden-xl hidden-lg" style="text-align: center; font-size: 300%; color: #FFF; text-shadow: 0px 0px 20px #000;"><br>Examples of our work
 	</h1>
-
-	<br>
-	<br>
 
 <!-- 	<a href="/submit/" style="text-align: center; font-size: 500%;">
 	You could be next!</a> -->
